<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.itson.estadotiempo.ContenidoActivity"
    tools:ignore="MergeRootFrame" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvCiudad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.39"
                android:text="@string/lblCiudad"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tvDia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:text="@string/lblDia"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvPresion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblPresion"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:text="@string/lblTemperatura" />

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvMinima"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblMinima"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tvActual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblActual"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvMaxima"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblMaxima"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvSensacionTermica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:text="@string/lblSensacion"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvHumedad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblHumedad"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvProbabilidadLluvia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblProbabilidad"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblUV"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvRiesgo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblRiesgo"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tvValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valor"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Viento"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvValorViento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblValor"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tMinimo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblMinimo"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tMaximo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblMaximo"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tvDireccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblDireccion"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblAstro"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvPuestaSol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblPuestaSol"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvSalidaSol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblSalidaSol"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvTipoLuna"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblTipo"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

    </TableLayout>

</RelativeLayout>