<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="mx.itson.ejerciciologin.FormActivity"
    android:id="@+id/layout1"
    android:background="@color/azul07"
    android:orientation="vertical"
    android:weightSum="1">

    <!--  <include layout="@layout/toolbar" /> -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.20"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_nombre"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/first_name"
            android:textColor="@color/blanco" />

        <TextView
            android:id="@+id/tv_apellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textColor="@color/blanco"
            android:layout_above="@+id/edt_last"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp" />


        <EditText
            android:id="@+id/edt_last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:textColor="@color/blanco"
            android:textColorHint="@color/blanco"
            android:layout_below="@+id/tv_nombre"
            android:layout_alignEnd="@+id/tv_apellido" />


        <EditText
            android:id="@+id/edt_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/edt_last"
            android:hint="@string/first_name"
            android:textColor="@color/blanco"
            android:textColorHint="@color/blanco" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".6"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingRight="4sp">

            <EditText
                android:id="@+id/edt_pass1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/blanco"/>
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingRight="4sp">



            <EditText
                android:id="@+id/edt_confpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/blanco"
                android:textColorHint="@color/blanco" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingRight="4sp">


            <EditText
                android:id="@+id/edt_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/telefono"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="@color/blanco"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingRight="4sp">

        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/edt_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/blanco"
            android:textColorHint="@color/blanco" />


    </LinearLayout>


    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".1"
        android:background="@color/amber10"
        android:text="@string/registrar"
        android:textColor="@color/blanco"
        android:textSize="22sp"
        android:textStyle="bold"/>



</LinearLayout>